[package]
name = "wmgen-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
wreq = { git = "https://github.com/0x676e67/wreq.git", features = ["cookies", "json", "gzip", "brotli", "zstd", "deflate"] }
wreq-util = { git = "https://github.com/0x676e67/wreq-util.git" }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "sync", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
indicatif = "0.17"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
base64 = "0.22"
regex = "1"
url = "2"

async-imap = { version = "0.10", default-features = false, features = ["runtime-tokio"] }
tokio-rustls = "0.26"
webpki-roots = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
mail-parser = "0.10"
futures = "0.3"

httparse = "1"
aes-gcm = "0.10"
sha2 = "0.10"

[profile.release]
lto = "thin"
codegen-units = 1
